discussion/kv_engine/87789/87789_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-27539: ThreadSanitizer detecting false positives

Tests in the PersistToTest set run with the ShutdownMode::Clean and
ShutdownMode::Unclean variants. When memcached is killed
(ShutdownMode::Unclean), ThreadSanitizer detects false race conditions
on the following tests. To fix, we skip 'Unclean' tests when run under
ThreadSanitizer.

Change-Id: I0f66151d664ba495de9ec0bc0e1a1788be44d65a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2018-01-12 13:07:00.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2018-01-12 13:09:22.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/5909/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/5909/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/5597/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/5597/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/5130/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/5130/ )

http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/5533/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/5533/ )

http://cv.jenkins.couchbase.com/job/kv_engine-addresssanitizer-master/5341/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-addresssanitizer-master/5341/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/4104/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-01-12 13:09:32.000000000
Message: 
Patch Set 3:

(2 comments)
Line:43, tests/testapp/testapp_persistence.cc -> Might as well just combine these in one line:

 #  if defined(__has_feature) && __has_feature(thread_sanitizer)

Line:52, tests/testapp/testapp_persistence.cc -> Clenaer to instead never run it - change the INSTANTIATE_TEST_CASE_P instantiation below to not include Unclean when TSan is enabled.

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2018-01-12 14:44:46.000000000
Message: 
Patch Set 3:

(1 comment)
Line:43, tests/testapp/testapp_persistence.cc -> GCC not happy with that:

>/home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/tests/testapp/testapp_persistence.cc:258:44: error: missing binary operator before token "("
 #if defined(__has_feature) && __has_feature(thread_sanitizer)
                                            ^
We cannot remove the `#if defined(__has_feature)` because it would break the Windows build.

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-01-12 15:00:50.000000000
Message: 
Patch Set 3:

(1 comment)
Line:43, tests/testapp/testapp_persistence.cc -> Ah ok - I was just looking at ep_perfsuite.cc which adds an additional #if __clang__ as currently we only ever run TSan via Clang (I believe newer GCCs might also support it).

What you have is fine then.

----------------------------------------------------------------------------------------------------------------------
